[gd_scene load_steps=6 format=3 uid="uid://cry6ncxk4h1hg"]

[ext_resource type="Script" path="res://scenes/Entities/Enemy/zombi_necromacer.gd" id="1_s1vk4"]
[ext_resource type="Texture2D" uid="uid://i7lpg4gc1qvc" path="res://sprites/Enemy/Zombi.png" id="2_mrm5f"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qpa5y"]
radius = 6.33333
height = 25.6667

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6u6hu"]
radius = 829.0
height = 1658.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c1qh5"]
height = 50.6667

[node name="Zombi_necromacer" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_s1vk4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.33333)
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_qpa5y")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, 7.66667)
scale = Vector2(0.159167, 0.135833)
texture = ExtResource("2_mrm5f")

[node name="Chase_area" type="Area2D" parent="."]
scale = Vector2(0.333333, 0.333333)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chase_area"]
shape = SubResource("CapsuleShape2D_6u6hu")

[node name="Hurt_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_area"]
position = Vector2(2.66667, 5.33333)
shape = SubResource("CapsuleShape2D_c1qh5")

[connection signal="body_entered" from="Chase_area" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Chase_area" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="Hurt_area" to="." method="_on_hurt_area_area_entered"]
